# book

./: .dockerignore  .gitattributes  .gitignore  .hgignore  .merlin  .ocamlinit  .replit  .replit.nix  .travis.yml  01-titlepage.html  03-toc.html  03_var1.tex  03_var1_exercises.tex  04_patt1_exercises.tex  13_mod3_exercises.tex  14_objects1_exercises.tex  16_objects3.tex  ADDING-A-CHAPTER  CHANGES.md  DEBIAN  Dockerfile  Dockerfile.local  INSTALL  INSTALL.sh  LICENSE  LICENSE.md  Makefile  Makefile.build  Makefile.rwo_lib  Makefile.shared  NOTES.md  OMakeroot  README.md  RENAMING-A-CHAPTER  _oasis  _tags  answers.tex  appa.html  appa.xml  atlas.json  (+123 more)
book/: 00-outline.adoc  00-prologue.html  01-guided-tour.html  01-guided-tour.md  01-prologue.adoc  01-titlepage.html  02-guided-tour.adoc  02-guided-tour.docbook  02-variables-and-functions.html  03-lists-and-patterns.html  03-modules-pre.md  03-modules-remainder.adoc  03-modules.docbook  03-modules.md  04-files-modules-and-programs.html  04-lists-options-and-patterns.adoc  04a-example-ascii-table.adoc  04a-example-ascii-table.md  05-records.html  05-records.md  06-variants.html  07-error-handling.html  07-error-handling.md  08-imperative-programming.html  08-mutation.md  09-functors.html  10-first-class-modules.html  10-first-class-modules.md  11-objects.html  11-objects.md  12-classes.html  13-maps-and-hashtables.html  14-command-line-parsing.html  15-json.html  16-parsing-with-ocamllex-and-menhir.html  16-parsing-with-ocamllex-and-menhir.md  17-data-serialization.html  18-concurrent-programming.html  19-foreign-function-interface.html  20-runtime-memory-layout.html  (+114 more)
book/ascii-table/: _tags  ascii_table.mli
book/classes/: README.md  dune  dune.inc
book/classes/examples/: dune.inc  multiple_inheritance.ml  verbose_shapes.ml
book/code/async/: better_echo.ml  echo.ml  main-35.rawscript  main-38.rawscript  main-44.rawscript  main-45.rawscript  main-46.rawscript  main-47.rawscript  main.topscript  pipe_write_break.rawscript  run_echo.sh  run_native_code_log_delays.rawsh  run_search.rawsh  run_search_with_configurable_server.rawsh  run_search_with_error_handling.out  run_search_with_error_handling.sh  run_search_with_timeout_no_leak.out  run_search_with_timeout_no_leak.sh  run_search_with_timeout_no_leak_simple.sh  search.ml  search_out_of_order.ml  search_with_configurable_server.ml  search_with_error_handling.ml  search_with_timeout.ml  search_with_timeout_no_leak.ml  search_with_timeout_no_leak_simple.ml
book/code/back-end/: alternate_list.ml  asm_from_compare_mono.out  asm_from_compare_mono.sh  bench_patterns.ml  bench_poly_and_mono.ml  gdb_alternate3.rawsh  instr_for_pattern_monomorphic_small.sh  (+8 more)
book/code/back-end-bench/: bench_patterns.ml  run_alternate_list.out  run_alternate_list.sh  run_bench_patterns.out  run_bench_poly_and_mono.out
book/code/back-end-embed/: build_embed_c.out  build_embed_c.sh  embed_me1.ml  link_dllib.rawsh  run_debug_hello.sh
book/command-line-parsing/: README.md  dune  dune.inc
book/compiler-backend/: README.md  dune  dune.inc
book/compiler-frontend/: README.md  dune  dune.inc
book/concurrent-programming/: README.md  dune  dune.inc
book/css/: app.css
book/data-serialization/: README.md  dune  dune.inc  prelude.ml
book/deprecated/: 03-modules.md
book/error-handling/: README.md  dune  dune.inc  prelude.ml
book/files-modules-and-programs/: README.md  dune  dune.inc
book/first-class-modules/: README.md  dune  dune.inc
book/foreign-function-interface/: README.md  dune  dune.inc  prelude.ml
book/functors/: README.md  dune  dune.inc  prelude.ml
book/gadts/: README.md  dune  dune.inc  prelude.ml
book/garbage-collector/: README.md  dune  dune.inc  prelude.ml
book/guided-tour/: README.md  dune  dune.inc  prelude.ml
book/imperative-programming/: README.md  dune  dune.inc  fib.ml  letrec.ml  memo.ml  prelude.ml
book/in-progress/: 24-gadts.html
book/js/: app.js  discourse.js
book/json/: README.md  dune  dune.inc  prelude.ml
book/lists-and-patterns/: README.md  dune  dune.inc
book/maps-and-hashtables/: README.md  dune  dune.inc  prelude.ml
book/objects/: README.md  dune  dune.inc  subtyping.ml
book/parsing-with-ocamllex-and-menhir/: README.md  dune  dune.inc
book/platform/: README.md  dune  prelude.ml
book/ppx/: README.md  dune  dune.inc
book/prologue/: README.md  dune  dune.inc
book/pygmentize/: ocaml-custom.py
book/records/: README.md  dune  dune.inc  prelude.ml
book/runtime-memory-layout/: README.md  dune  dune.inc
book/scss/: _authors.scss  _base.scss  _chapter.scss  _faqs.scss  _footer.scss  _home-extras.scss  _index-toc.scss  _layout.scss  _main-nav.scss  _next-chapter.scss  _pygments.scss  _scroll-nav.scss  _settings.scss  _splash.scss  _toc-full.scss  _toc.scss  app.scss
book/testing/: README.md  dune  dune.inc  prelude.ml
book/variables-and-functions/: README.md  dune  dune.inc
book/variants/: README.md  catch_all.ml  dune  dune.inc  logger.ml  old_termcolor.ml  prelude.ml
cram/: cram.opam
cram/lib/: common.ml  cram.ml  cram.mli  jbuild  lexer.mll  s.ml
scripts/: .travis.yml  Makefile  _tags  add_parts.ml  build  build.sh  buildgh.sh  cache.diff  chapter.ml  chapters.ml  code_frag.ml  config.ml  downtime.ml  dump_paragraph_fragments.ml  filter_book.ml  get_chapter_files.ml  githubbot.ml  html_code_highlight.ml  install  memcache.ml  memcache.mli  original.sed  para_frag.ml  redirect.ml  rewrite  rewrite_link_to_xref.ml  run_core_toplevel.ml  rwo.opam  rwocli.ml  rwoserver.ml  rwoserver_cache.ml  syntax_highlight_code.ml  tidy.sh  transform_markdown.ml  transform_pandocbook.ml  xml_tree.ml
scripts/lib/: jbuild  rwo_bash_script.ml  rwo_book.ml  rwo_core2.ml  rwo_core2.mli  rwo_html.ml  rwo_index.mli  rwo_lang.mli  rwo_ppre.ml  rwo_references.ml  rwo_references.mli  rwo_scripts.ml  rwo_toc.ml
static/: CNAME  dune  dune.inc  jbuild.inc
static/css/: app.css  prism.css
static/js/: app.js  discourse.js  modernizr.js  prism.js
static/scss/: _home-extras.scss  _index-toc.scss  _main-nav.scss  _next-chapter.scss  app.scss
(+19835 files in other folders)
