; PDF Generation

(rule
  (targets inputs.tex)
  (deps ../book/toc.scm)
  (action (run rwo-build build inputs -o . -repo-root ..)))

(rule
 (alias pdf)
 (targets book.pdf)
 (deps
  (alias ../book/latex)
  (:x ../book/book.tex)
  inputs.tex)
 (action
  (progn
   (system "pdflatex -interaction=nonstopmode %{x} -draftmode")
   (system "makeindex book.idx")
   (system "pdflatex -interaction=nonstopmode %{x}"))))

; Website Generation

(alias
  (name site)
  (deps css/app.css
        css/prism.css
        images/anil.jpg
        images/bg.jpg
        images/book-cover.jpg
        images/cover.png
        images/jason.jpg
        images/plain-bg.jpg
        images/yaron.jpg
        images/front-end/pipeline.png
        images/gc/minor_heap.png
        images/imperative-programming/edit_distance.png
        images/imperative-programming/edit_distance2.png
        images/lists-and-patterns/lists_layout.png
        images/memory-repr/block.png
        images/memory-repr/float_array_layout.png
        images/memory-repr/string_block.png
        images/memory-repr/string_size_calc.png
        images/memory-repr/tuple_layout.png
        js/_functions.js
        js/app.js
        js/jquery.min.js
        js/modernizr.js
        js/prism.js
        js/min/app-min.js
        js/min/modernizr-min.js
        theme/pdf/pdf.css))

(rule
 (alias site)
 (targets faqs.html)
 (deps (alias ../book/html) ../book/faqs.html)
 (action (run rwo-build build faqs -o . -repo-root ..)))

(rule
 (alias site)
 (targets index.html)
 (deps (alias ../book/html) ../book/index.html ../book/toc.scm)
 (action (run rwo-build build index -o . -repo-root ..)))

(rule
 (alias site)
 (targets install.html)
 (deps (alias ../book/html) ../book/install.html)
 (action (run rwo-build build install -o . -repo-root ..)))

(rule
 (alias site)
 (targets toc.html)
 (deps (alias ../book/html) ../book/toc.html ../book/toc.scm)
 (action (run rwo-build build toc -o . -repo-root ..)))

(rule
 (deps ../book/toc.scm)
 (action
  (with-stdout-to dune.gen
   (run rwo-build rules web -repo-root ..))))

(rule
 (alias runtest)
 (action (diff dune.inc dune.gen)))

(alias
 (name site)
 (deps (alias runtest)))

(include dune.inc)
