opam-version: "1.2"
maintainer: "Frederic Bour <frederic.bour@lakaban.net>"
authors: ["Frederic Bour <frederic.bour@lakaban.net>"
          "Anil Madhavapeddy <anil@recoil.org>"]
homepage: "https://github.com/let-def/topexpect"
bug-reports: "https://github.com/let-def/topexpect"
license: "MIT"
dev-repo: "https://github.com/let-def/topexpect.git"
build: [
  [make]
]
depends: [
  "ocamlfind" {build}
  "ppx_sexp_conv" {build}
  "ppx_deriving" {build}
]
available: [ ocaml-version >= "4.04.0" ]
