opam-version: "1.2"
name: "Real-World-OCaml"
version: "dev"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
homepage: "https://github.com/realworldocaml/book"
license: "PROPRIETARY"

build: []

depends: [
  "jbuilder"
  "rwo"
  "ocaml-topexpect"
]

depexts: [
 [["ubuntu"] ["tzdata"]]
 [["debian"] ["tzdata"]]
 [["alpine"] ["tzdata"]]
]
available: [
  ocaml-version >= "4.04.1"
]
