opam-version: "2.0"
name: "rwo"
version: "dev"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
homepage: "https://github.com/realworldocaml/book"
license: "ISC"
authors: ["Yaron Minsky" "Anil Madhavapeddy" "Jason Hickey"]
dev-repo: "git://github.com/realworldocaml/book.git"
bug-reports: "https://github.com/realworldocaml/book/issues"

build: [ "jbuilder" "build" ]

depends: [
  "ocaml" {>= "4.06.0"}
  "core" {>="v0.11.0"}
  "async" {>="v0.11.0"}
  "ppx_sexp_conv" {build & >="v0.9.0"}
  "ppx_deriving"
  "jbuilder" {build & >="1.0+beta9"}
  "toplevel_expect_test"
  "patdiff"
  "lambdasoup"
  "sexp_pretty"
  "re" "fmt"
  # Required for code blocks within book.
  "cohttp-async"
  "core_bench"
  "mtime"
  "yojson"
  "astring"
  "cryptokit"
  "ocp-index"
  "atd"
  "atdgen"
  "ctypes"
  "async_graphics"
  "ctypes-foreign"
  "textwrap"
  "uri"
]
pin-depends: [
 ["async_graphic.dev" "git://github.com/drewsdunne/async_graphics.git"]
]
depexts: [
 [["ubuntu"] ["tzdata"]]
 [["debian"] ["tzdata"]]
 [["alpine"] ["tzdata"]]
]
