opam-version: "2.0"
name: "rwo"
version: "dev"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: ["Yaron Minsky" "Anil Madhavapeddy" "Jason Hickey"]
license: "ISC"
homepage: "https://github.com/realworldocaml/book"
bug-reports: "https://github.com/realworldocaml/book/issues"
synopsis: "Real World OCaml book sources"
depends: [
  "ocaml" {>= "4.06.0"}
  "core" {>= "v0.11.0"}
  "async" {>= "v0.11.0"}
  "ppx_sexp_conv" {>= "v0.9.0"}
  "ppx_jane"
  "dune" {>= "1.11.0"}
  "patdiff"
  "lambdasoup"
  "sexp_pretty"
  "re"
  "fmt"
  "cohttp-async"
  "core_bench"
  "mtime" {< "1.2.0"}
  "yojson"
  "astring"
  "cryptokit"
  "ocp-index"
  "atd"
  "atdgen"
  "ctypes" {< "0.15.0"}
  "ctypes-foreign"
  "textwrap"
  "uri"
  "mdx" {= "1.4.0"}
  "async_graphics"
]
build: ["dune" "build"]
depexts: [
  ["tzdata"] {os-distribution = "ubuntu"}
  ["tzdata"] {os-distribution = "debian"}
  ["tzdata"] {os-distribution = "alpine"}
]
dev-repo: "git+https://github.com/realworldocaml/book.git"
