opam-version: "2.0"
name: "rwo"
version: "dev"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: ["Yaron Minsky" "Anil Madhavapeddy" "Jason Hickey"]
license: "ISC"
homepage: "https://github.com/realworldocaml/book"
bug-reports: "https://github.com/realworldocaml/book/issues"
synopsis: "Real World OCaml book sources"
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "1.11.0"}
]
build: ["dune" "build"]
depexts: [
  ["tzdata"] {os-distribution = "ubuntu"}
  ["tzdata"] {os-distribution = "debian"}
  ["tzdata"] {os-distribution = "alpine"}
]
dev-repo: "git+https://github.com/realworldocaml/book.git"
