opam-version: "1.2"
maintainer: "Thomas Gazagnaire <thomas@gazagnaire.org>"
homepage: "https://github.com/realworldocaml/book"
license: "ISC"
dev-repo: "https://github.com/realworldocaml/book.git"
bug-reports: "https://github.com/realworldocaml/book/issues"

build: [ "jbuilder" "build" ]

available: [
  ocaml-version >= "4.06.0"
]
