opam-version: "1.2"
name: "rwo"
version: "dev"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
homepage: "https://github.com/RealWorldOCaml/scripts"
license: "ISC"
authors: ["Yaron Minsky" "Anil Madhavapeddy" "Jason Hickey"]
dev-repo: "https://github.com/RealWorldOCaml/scripts.git"
bug-reports: "https://github.com/RealWorldOCaml/scripts/issues"

build: [ "jbuilder" "build" ]

depends: [
  "core" {>="v0.9.0"}
  "async" {>="v0.9.0"}
  "ppx_sexp_conv" {build & >="v0.9.0"}
  "cohttp" {>="0.99.0"}
  "jbuilder" {build & >="1.0+beta9"}
  "ocamlnet"
  "toplevel_expect_test"
  "ocaml-topexpect"
  "patdiff"
  "cohttp-async"
  # Required for code blocks within book.
  #"core_bench"
  #"mtime"
  #"yojson"
  #"astring"
  #"cryptokit"
  #"async_graphics"
  #"ocp-index"
  #"atd"
  #"atdgen"
  #"ctypes"
  #"ctypes-foreign"
  #"textwrap"
  #"uri"
]

depexts: [
 [["ubuntu"] ["tzdata"]]
 [["debian"] ["tzdata"]]
 [["alpine"] ["tzdata"]]
]
available: [
  ocaml-version >= "4.04.2"
]
