(alias
  (name site)
  (deps css/app.css
        css/prism.css
        images/anil.jpg
        images/bg.jpg
        images/book-cover.jpg
        images/cover.png
        images/jason.jpg
        images/plain-bg.jpg
        images/yaron.jpg
        images/front-end/pipeline.png
        images/gc/minor_heap.png
        images/imperative-programming/edit_distance.png
        images/imperative-programming/edit_distance2.png
        images/lists-and-patterns/lists_layout.png
        images/memory-repr/block.png
        images/memory-repr/float_array_layout.png
        images/memory-repr/string_block.png
        images/memory-repr/string_size_calc.png
        images/memory-repr/tuple_layout.png
        js/_functions.js
        js/app.js
        js/discourse.js
        js/jquery.min.js
        js/modernizr.js
        js/prism.js
        js/min/app-min.js
        js/min/modernizr-min.js
        theme/pdf/pdf.css))(alias (name site) (deps faqs.html))
  (rule
    (targets faqs.html)
    (deps    (alias ../book/html) ../book/faqs.html ../bin/bin/app.exe )
    (action  (run rwo-build build faqs -o . -repo-root ..)))

(alias (name site) (deps index.html))
  (rule
    (targets index.html)
    (deps    (alias ../book/html) ../book/index.html ../bin/bin/app.exe )
    (action  (run rwo-build build index -o . -repo-root ..)))

(alias (name site) (deps install.html))
  (rule
    (targets install.html)
    (deps    (alias ../book/html) ../book/install.html ../bin/bin/app.exe )
    (action  (run rwo-build build install -o . -repo-root ..)))

(alias (name site) (deps toc.html))
  (rule
    (targets toc.html)
    (deps    (alias ../book/html) ../book/toc.html ../bin/bin/app.exe ../book/toc.scm)
    (action  (run rwo-build build toc -o . -repo-root ..)))
